--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ p{
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
     line-height: 150%;
-    margin-bottom: 40px;
+   
 }
 .primary-btn{
     padding: 20px 40px;
@@ -51,6 +51,7 @@ section{
 /* ............start order-top...................*/
 #order-top .order-top-inner{
     display: flex;
+    align-items: center;
 }
 #order-top .order-top-inner .order-top-left{
     width: 40%;
@@ -66,11 +67,62 @@ section{
 #order-top .order-top-inner .order-top-left p{
     font-size: 20px;
     color: #707070;
+    margin-bottom: 40px;
 }
 #order-top .order-top-right{
     width: 40%;
     padding: 0 5%;
 }
 #order-top .order-top-right img{
+    width: 100%;
+}
+/* ...........starting about-me................... */
+ #about-me{
+     background-image: url(/images/7.png);
+     background-repeat: no-repeat;
+     
+ }
+ #about-me .about-me-inner{
+     display: flex;
+     align-items: center;
+ }
+ #about-me .about-me-inner .about-me-left{
+     width: 50%;
+     padding-left: 10%;
+ }
+ #about-me .about-me-inner .about-me-left img{
+     width: 60%;
+ }
+ #about-me .about-me-inner .about-me-right{
+     width: 50%;
+     padding-right: 10%;
+ }
+ #about-me .about-me-inner .about-me-right h2{
+    color: #757473;
+    text-transform: capitalize;
+ }
+ #about-me .about-me-inner .about-me-right p{
+     font-size: 18px;
+     line-height: 170%;
+     text-transform: capitalize;
+     letter-spacing: 0.25px;
+     color: #18191F;
+     margin-bottom: 60px;
+ }
+
+ /* ..............start My-recipies...................... */
+#My-recipies .my-recipies-inner{
+    display: flex;
+    margin: 0 5%;
+}
+#My-recipies .my-recipies-one{
+    background: white;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 15px grey;
+    margin:0 2%;
+    
+}
+#My-recipies .my-recipies-one img{
     width: 100%;
 }
